[metadata]
name = pgai
version = attr: ai.__version__

[options]
python_requires = >=3.10
packages = ai
# unfortunately, we cannot refer to the requirements.txt file with python 3.10
install_requires =
    openai==1.52.2
    tiktoken==0.8.0
    ollama==0.3.3
    anthropic==0.37.1
    cohere==5.11.1
    backoff==2.2.1
