[metadata]
name = pgai
version = attr: ai.__version__

[options]
python_requires = >=3.10
packages = ai
# unfortunately, we cannot refer to the requirements.txt file with python 3.10
install_requires =
    openai==1.51.2
    tiktoken==0.8.0
    ollama==0.2.1
    anthropic==0.29.0
    cohere==5.5.8
    backoff==2.2.1
    voyageai==0.3.1
    datasets==3.1.0
