[project]
name = "pgai-quickstart"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "jinja2",
  "openai",
  "questionary",
  "psycopg[binary]",
  "yaspin",
  "voyageai>=0.3.2",
  "cohere>=5.13.12",
]

[tool.uv.sources]
questionary = { git = "https://github.com/JamesGuthrie/questionary", branch = "fix-select-dynamic-choice" }

