[project]
name = "pgai-quickstart"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "jinja2 >= 3, < 4",
  "openai >= 1, < 2",
  "questionary >= 2, < 3",
  "psycopg[binary] >= 3, <4",
  "yaspin >= 3, < 4",
  "voyageai >= 0.3, < 0.4",
  "cohere >= 5, < 6",
]

[tool.uv.sources]
questionary = { git = "https://github.com/JamesGuthrie/questionary", branch = "fix-select-dynamic-choice" }

[dependency-groups]
dev = [
    "ruff>=0.9.6",
]

