[project]
name = "pgai-quickstart"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "jinja2 >= 3, < 4",
  "openai >= 1, < 2",
  "questionary >= 2, < 3",
  "psycopg[binary] >= 3, <4",
  "requests >= 2, <3",
  "yaspin >= 3, < 4",
  "voyageai >= 0.3, < 0.4",
  "cohere >= 5, < 6",
  "tabulate >= 0.9, < 0.10"
]

[dependency-groups]
dev = [
    "ruff>=0.9.6",
]

