[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "vectorizer"
dynamic = ["version", "dependencies"]
requires-python = ">=3.10"

[tool.setuptools.dynamic]
version = {attr = "vectorizer.__version__"}
dependencies = {file = "requirements.txt"}

[tool.setuptools]
packages = ["vectorizer"]

[project.scripts]
vectorizer = "vectorizer.cli:run"
